# sibl

./: .gitignore  LICENSE  NOTICE.md  README.md  asdf.inp  environment.md  environment.yml  meta.yaml  quality.sh  quarter_plate.txt  setup.py  style.sh  test_unit_circle.inp
cli/: pyproject.toml  setup.py
cli/doc/: README.md  documentation.md
cli/io/example/: HughesQT0.0078125.inp  HughesQT0.125.inp  HughesQT0.25.inp  README.md  abaqus_QT0.5.inp  abaqus_QT0.5_small.inp  abaqus_SCBF0.5.inp  abaqus_SCSS0.5.inp  abaqus_mesh.json  data.xlsx  recipe.json  recipe.yml  recipe_minimal.yml  recipe_with_background.yml
cli/io/mil_spec_paper/: 2020-01-30-10fps-strapless-udot.csv  Figure_2b.json  Figure_5b_sim.json  Figure_5b_ssr.json  README.md  angular_acceleration_x.csv  exp-dot-062-strapless-uddot.json  h1-acc-vel-dis-bor.json  h1-master-acc.json  histogram_100_points.json  histogram_strain_rate_95th.csv  tw_hard_foam.json
cli/process/exodus/: population.py  test_ebe_max_principal_rate_of_deformation_51_small.txt  visualization.py
cli/process/tpav/: test_three_points_angular_velocity.py
cli/src/xyfigure/: __init__.py  calculator.py  client.py  command_line.py  factory.py  functional_architecture.py  three_points_angular_velocity.py  (+6 more)
cli/tests/: README.md  correlation_recipe.yml  test_functional_architecture.py
geo/: pyproject.toml  setup.py  setup_deprecated.py
geo/doc/: README.md  cinolib.md  cinolib_deprecated.md  definitions.md  dual_quad_transitions.md  fig_quadtree.tex  main.tex  plot_bspline.py  plot_bspline_N0_p0_to_p4.py  plot_bspline_N0_p0_to_p5_manual.py  plot_bspline_basis.py  plot_bspline_basis_manual.py  plot_bspline_constant.py  plot_bspline_manual.py  plot_bspline_periodic.py  plot_dual_quad.py  plot_inpfile_2D.py  plot_inpfile_2D_smoothing.py  plot_marching_cubes.py  plot_modified_bezier.py  plot_open_bspline_basis_p2.py  plot_periodic_bspline_basis_p2.py  plot_quadtree.py  plot_quadtree_convention.py  plot_smooth_project.py  plot_voronoi.py  proposal.md  pybind11.md  qt.md  quadtree.md  quadtree.tex  quadtree_hill.py  snakes_baseline.py  unit-test-bunny.md  unit-test-femur.md  unit-test-font.md  unit-test-ptm.md  unit-test-quadtree.md  unit-test-remesh.md  unit-test-snakes.md  (+5 more)
geo/examples/: bingol_3d_surfaces_example.py  bspline_scipy_unit_examples.ipynb  bspline_surface_Bezier_recovery.py  bspline_surface_biquad2tri_animation.py  bspline_surface_cube.py  bspline_surface_cube_degen_quadratic.py  bspline_surface_cube_linear.py  bspline_surface_cube_quadratic.py  bspline_surface_cube_quadratic_base.py  bspline_surface_cyl2sphere_animation.py  bspline_surface_qtrcyl2sphere_quadratic.py  bspline_surface_qtrcyl_quadratic.py  bspline_surface_quad2tri_quadratic.py  bspline_surface_sphere.py  image2movie.py  mesh_smoothin.ipynb  mesh_smoothing.ipynb  mesh_smoothing.md  mesh_smoothing.py  pix_flow.py  pixel_letter_I.py  pixel_shapes_example.py  pixel_to_mesh_example.py  pixlet.py  quadtree_example.py  skimage_marching_cubes.py
geo/notebooks/: BSpline_client.ipynb  client.py  thresholding_check.ipynb
geo/src/: quadtree_hill.py
geo/tests/: bingol_3d_surfaces.py  delangles  geo_xform.py  mesh.inp  test_bernstein_polynomial.py  test_bernstein_surface.py  test_bezier_indices.py  test_bezier_surface.py  test_bspline.py  test_bspline_basis_manual.py  test_bspline_fit.py  test_bspline_fit_linear_ring.py  test_bspline_manual.py  test_bspline_polynomial.py  test_command_line.py  test_copyright.py  test_domain_merge.py  test_dual_hex.py  test_dual_quad.py  test_hello.py  test_mesh.py  test_mesh_merge.py  test_mesh_morph.py  test_mesh_smoothing.py  test_pixel_shape.py  test_pixel_sphere.py  test_point.py  test_polygon.py  test_quadtree.py  test_reader.py  test_regularize_radial.py  test_translator.py  test_view_bernstein_surface.py  test_view_bezier.py  test_view_bspline.py  test_xybind.py  test_xybind_lessons.py  test_zell.py
(+836 files in other folders)
