# reference
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# PEP621
# https://peps.python.org/pep-0621/
#
# Python Packages
# https://py-pkgs.org/welcome


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ptg"
version = "0.0.13"
authors = [
  { name="Chad Hovey", email="chovey@sandia.gov" },
]
description = "SNL SIBL Geometry Engine"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # "copyright @ git+https://github.com/sandialabs/copyright",
    "ipykernel",
    "matplotlib",
    "mypy",
    # "notebook",  # no longer needed
    # "pybind11",  # suppress as of 2024-12-17
    "pygments",
    "pytz",
    "pyyaml",
    "seaborn",
    "scikit-image",
    "scipy",
    # "snlcopyright==0.0.9",
    "snlcopyright",
]

# Optional dependencies video
# https://www.youtube.com/watch?v=yJyo-K7wW2g

[project.optional-dependencies]
dev = ["black", "flake8", "pytest", "pytest-cov"]

# Entry Points
# https://setuptools.pypa.io/en/latest/userguide/entry_point.html
[project.scripts]
cli-hello="ptg.command_line:say_hello"
version="ptg.command_line:version"
pydual="ptg.main:main"

[project.urls]
"Homepage" = "https://github.com/sandialabs/sibl"
"Bug Tracker" = "https://github.com/sandialabs/sibl/issues"
